# ezquake-source

./: .config_windows  .config_windows-clang  .cproject  .cvsignore  .gitignore  .gitmodules  .project  .travis.yml  ANTI_LAG_REPORT.md  BUILD.md  CHANGELOG  CMakeLists.txt  CMakePresets.json  COMPILING_FOR_WINDOWS.txt  COMPILING_ON_LINUX.txt  COMPILING_ON_LINUX_DOCKER.txt  COMPILING_ON_NETBSD.txt  COMPILING_ON_OSX.txt  CarbonSndPlayDB.c  CarbonSndPlayDB.h  Ctrl.c  Ctrl.h  Ctrl_EditBox.c  Ctrl_EditBox.h  Ctrl_PageViewer.c  Ctrl_PageViewer.h  Ctrl_ScrollBar.c  Ctrl_Tab.c  Ctrl_Tab.h  Directory.Build.props  Directory.Build.targets  Dockerfile.focal  EX_FileList.c  EX_FileList.h  EX_FunNames.c  EX_FunNames.h  EX_browser.c  EX_browser.h  EX_browser_net.c  EX_browser_pathfind.c  (+731 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build-and-deploy-release.yml  build-and-deploy-snapshots.yml  build-targets.yml  linux-build.yml  main.yml  setup.yml  test.yml
Debug/: d_draw.asm  d_draw16.asm  d_polysa.asm  d_scana.asm  d_spr8.asm  d_varsa.asm  ezquake.ilk  r_aliasa.asm  r_drawa.asm  r_edgea.asm  r_varsa.asm  snd_mixa.asm  surf8.asm
Debug-gl/: BuildLog.htm  math.asm  snd_mixa.asm  vc70.idb
Release-gl/: sys_x86.asm  vc70.idb  winquake.res
_extras/: pak0.pak  pak1.pak
cmake/: AddResources.cmake  CheckDependency.cmake  FindPCRE.cmake  FindSDL2.cmake  FindSPEEXDSP.cmake  FindSpeex.cmake  FindSpeexDSP.cmake  Findjansson.cmake  GetGitRevisionDescription.cmake  GitUtils.cmake  README  ResourceCompiler.cmake
cmake/triplets/: arm64-osx-release.cmake  arm64-osx.cmake  x64-mingw-static.cmake  x64-osx-release.cmake  x64-osx.cmake  x86-mingw-static.cmake
docs/: ANTI_LAG_ADMIN_TUNING.md  ANTI_LAG_INVARIANTS.md  ANTI_LAG_PLAYER_FAIRNESS.md  ANTI_LAG_TROUBLESHOOTING.md  hud-modernization-plan.md
documentation/: index.xml  plan.txt
documentation/commands/: +attack.xml  +back.xml  +forward.xml  +jump.xml  +klook.xml  +left.xml  +lookdown.xml  +lookup.xml  +mlook.xml  +movedown.xml  +moveleft.xml  +moveright.xml  +moveup.xml  +right.xml  +showscores.xml  +showteamscores.xml  +speed.xml  +strafe.xml  +use.xml  -attack.xml  -back.xml  -forward.xml  -jump.xml  -klook.xml  -left.xml  -lookdown.xml  -lookup.xml  -mlook.xml  -movedown.xml  -moveleft.xml  -moveright.xml  -moveup.xml  -right.xml  -showscores.xml  -showteamscores.xml  -speed.xml  -strafe.xml  -use.xml  addip.xml  addserver.xml  (+226 more)
doxygen/: Doxyfile  doxygen.css
ezquake/: .cvsignore  CarbonSndPlayDB.c  Ctrl.c  Ctrl.h  Ctrl_EditBox.c  Ctrl_EditBox.h  Ctrl_PageViewer.c  Ctrl_PageViewer.h  Ctrl_ScrollBar.c  Ctrl_Tab.c  Ctrl_Tab.h  EX_FileList.c  EX_FileList.h  EX_FunNames.c  EX_browser.c  EX_browser.h  EX_browser_net.c  EX_browser_ping.c  EX_browser_sources.c  EX_misc.c  EX_misc.h  Jmorecfg.h  Makefile  Makefile.list  adivtab.h  anorm_dots.h  asm_draw.h  asm_i386.h  auth.c  auth.h  block8.h  cd_linux.c  cd_null.c  cd_win.c  cdaudio.h  cl_cam.c  cl_cam.h  cl_cmd.c  cl_collision.c  cl_collision.h  (+317 more)
ezstart/: Unit1.cpp  Unit1.dfm  Unit1.h  ezStart.bpr  ezStart.cpp  ezStart.res
gas2masm/: .cvsignore  gas2masm.c  gas2masm_msvs_60.dsw  gas2masm_msvs_60.opt  gas2masm_msvs_70.dsp  gas2masm_msvs_71.vcproj  gas2masm_msvs_80.sln  gas2masm_msvs_80.vcproj
glsl/: billboard.fragment.glsl  billboard.vertex.glsl  common.glsl  constants.glsl  draw_aliasmodel.fragment.glsl  draw_aliasmodel.vertex.glsl  draw_polygon.fragment.glsl  draw_polygon.vertex.glsl  draw_sprites.fragment.glsl  draw_world.fragment.glsl  draw_world.vertex.glsl  drawworld.fragment.glsl  drawworld.vertex.glsl  generic_poly.fragment.glsl  generic_poly.vertex.glsl  hud_draw_circle.vertex.glsl  hud_draw_image.fragment.glsl  hud_draw_image.vertex.glsl  hud_draw_line.vertex.glsl  image_draw.fragment.glsl  image_draw.vertex.glsl  lighting.compute.glsl  lightmaparray_poly.fragment.glsl  lightmaparray_poly.vertex.glsl  line_draw.fragment.glsl  line_draw.vertex.glsl  model_alias.fragment.glsl  model_alias.vertex.glsl  model_brush.fragment.glsl  model_brush.vertex.glsl  model_shell.fragment.glsl  model_shell.vertex.glsl  multi_image_draw.fragment.glsl  multi_image_draw.geometry.glsl  multi_image_draw.vertex.glsl  particles_classic.fragment.glsl  particles_classic.geometry.glsl  particles_classic.vertex.glsl  particles_qmb.fragment.glsl  particles_qmb.vertex.glsl  (+19 more)
libexpat/: xmlparse.c
libs/: .cvsignore  asmlib.h  dinput.h  dsound.h  expat.h  jconfig.bsd.h  jconfig.h  jconfig.linux.h  jmorecfg.h  libexpat.lib  libpcre.lib  libpng.lib  pcre.config.freebsd.h  pcre.config.linux.h  pcre.config.mac.h  pcre.config.win.h  pcre.h  png.h  png12.h  png14.h  pngconf.h  pngconf14.h  tcl.h  tclDecls.h  tclPlatDecls.h  windows-libs-download.bat  zconf.h  zlib.lib
make/: .cvsignore  README.TXT  download_dependencies.bat  download_dependencies_x32.bat  download_dependencies_x64.bat
masm32/: .cvsignore  download.bat
mingw32-libs/: config
misc/: pak.lst  paks.lst
osx/: FDGLScreenshot.h  FDLinkView.m  FDModifierCheck.m  FDScreenshot.m  GrowBox.tiff  Growl Registration Ticket.growlRegDict  Quake.h  Quake.icns  Quake.m  QuakeApplication.h  QuakeApplication.m  QuakeView.h  QuakeView.m  ReadMe.icns  cd_osx.h  cd_osx.m  gl_vidosx.m  in_osx.h  in_osx.m  main.m  readme.m  snd_osx.h  snd_osx.m  sys_osx.h  sys_osx.m  vid_osx.h  vid_osx.m  vid_shared_osx.m
pcre/: config.h
src/: Ctrl_PageViewer.c  EX_FileList.c  EX_browser.c  EX_browser_net.c  EX_browser_pathfind.c  EX_browser_sources.c  EX_qtvlist.c  EX_qtvlist.h  anorm_dots.h  bspfile.h  cd_null.c  central.c  cl_cam.c  cl_cmd.c  cl_demo.c  cl_easyaircontrol.h  cl_ents.c  cl_ezcsqc.c  cl_input.c  cl_main.c  cl_mouseaccel.c  cl_mouseaccel.h  cl_parse.c  cl_pred.c  cl_screen.c  cl_screenshot.c  cl_slist.c  cl_sprays.c  cl_tent.c  cl_tent.h  cl_view.c  client.h  cmd.c  cmd.h  cmdline_params_ids.h  cmodel.c  cmodel.h  collision.c  com_msg.c  common.c  (+324 more)
statican/: flawfinder.sh  flaws_base.html  flaws_base.list  rats.sh  rats_all.html  rats_base.txt  readme.txt
tests/: test_invariant_sv_demo_qtv.c
(+1928 files in other folders)
